--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,16 @@
-requests==2.31.0
+# AI Benchmark Aggregator Dependencies
+
+# Core scraping
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
+
+# Browser automation (for JS-rendered sites)
+playwright>=1.40.0
+
+# Data processing
+pandas>=2.0.0
+pyarrow>=14.0.0
+
+# JSON handling
+orjson>=3.9.0
